feat(lang-core-java): add QueryManagerTest and fix null-value handling in snapshot map (Task 19.6)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>